:bug: moj-ticket-panel has no flex wrap
This allows the address version to go on one line and the offences
version to go full width.

--- a/app/assets/sass/components/_ticket-panel.scss
+++ b/app/assets/sass/components/_ticket-panel.scss
@@ -11,8 +11,9 @@
   display: flex;
   justify-content: space-between;
   margin-right: govuk-spacing(3);
-  flex-wrap: wrap;
-  flex-grow: 1;
+  flex-wrap: nowrap;
+  flex-grow: 0;
+  min-width: 26rem;
   border: 1px solid govuk-colour("mid-grey");
   background-color: govuk-colour("white");
   margin-bottom: govuk-spacing(3);
@@ -95,7 +96,7 @@
 
     &__content {
       min-height: 7rem;
-      width: 26rem;
+
       position: relative;
       padding: govuk-spacing(4);
       flex-grow: 5;
@@ -151,11 +152,17 @@
           background-color: govuk-colour("orange");
         }
       }
+
+    }
+
+    .moj-ticket-panel__links{
+      text-align: right;
     }
 
     &__content-with-actions {
       padding: govuk-spacing(0);
       border-left: 0;
+      width: 26rem;
 
       .govuk-grid-row{
         margin-left: 0;
